<resources>
    <string name="app_name">projetFully</string>
    <string name="title_activity_selected_community">SelectedCommunity</string>
    <string name="testdataTitle">Test data</string>
    <string name="testdataQuestion">Voulez-vous vraiment ajouter les data pour test?</string>


    <string name="communitytypes">Types of community</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="title_activity_user_call">UserCallActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="communitytype">Type of community</string>
    <string name="contextmenu">Option</string>
    <string name="delete_question">Are you sure you want to delete the selected item?</string>


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>
    <string name="community">Community</string>
    <string name="communities">Communities</string>
    <string name="types_of_community">Types of Community</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="modify_button">Modify</string>
    <string name="identifiant">Id</string>
    <string name="type_of_community">Type of community</string>
    <string name="idUser">Id user</string>
    <string name="new_community">New community</string>
    <string name="modify_community">Modify a community</string>
    <string name="error">Error</string>
    <string name="Community_control">Unable to add Community: please check your input</string>
    <string name="new_gaeCommunity_added">You have added a new community</string>
    <string name="update_gaeCommunity">You have updated a community</string>
    <string name="deleted">Removed: </string>
    <string name="joinUs">Join us</string>
    <string name="Leave">Leave</string>
    <string name="calls">Calls</string>
    <string name="call">call</string>
    <string name="new_gaeCall_added">You have added a new call</string>
    <string name="update_gaeCall">You have updated a call</string>
    <string name="Call_control">Unable to add Call: please check your input</string>
    <string name="new_call">New call</string>
    <string name="modify_call">Modify call</string>
    <string name="date">Date</string>
    <string name="lieu">Place</string>
    <string name="showInMap">Show in Map</string>
    <string name="Call">Call</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_call_maps">Map</string>
    <string name="all">All</string>
    <string name="joined">Joined</string>
    <string name="noPermissionToDelete">You do not have permissions to delete</string>
    <string name="noPermissionToUpdate">You do not have permissions to edit</string>
</resources>
